# crewai

./: .gitignore  README.md  pyproject.toml
agents/: career_profile_analyst.jsonc
career_plan_agents/: README.md  crew.jsonc  pyproject.toml
career_plan_agents/agents/: development_plan_designer.jsonc  qualification_gap_analyst.jsonc  self_assessment_coach.jsonc
career_plan_agents_classic/: .env.example  pyproject.toml
career_plan_agents_classic/src/career_plan_agents_classic/config/: tasks.yaml
src/career_plan_agents_classic/: crew.py  main.py
src/career_plan_agents_classic/config/: agents.yaml
