[project]
name = "career_plan_agents_classic"
version = "0.1.0"
description = "career_plan_agents_classic using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]>=1.15.2,<2.0.0",
]
[project.scripts]
career_plan_agents = "career_plan_agents_classic.main:run"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/career_plan_agents_classic"]